# ESP32-GenICam

./: .envrc.example  .gitignore  CLAUDE.md  CMakeLists.txt  DISCOVERY_ANALYSIS.md  PLAN.md  README.md  justfile  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32cam
components/main/: CMakeLists.txt  Kconfig  camera_handler.c  camera_handler.h  genicam_xml.c  genicam_xml.h  gvcp_bootstrap.c  gvcp_bootstrap.h  gvcp_discovery.c  gvcp_discovery.h  gvcp_handler.c  gvcp_handler.h  gvcp_protocol.c  gvcp_protocol.h  gvcp_registers.c  gvcp_registers.h  gvcp_statistics.c  gvcp_statistics.h  gvsp_handler.c  gvsp_handler.h  main.c  status_led.c  status_led.h  web_server.c  wifi_manager.c  wifi_manager.h
components/main/genicam/: xml.c
components/main/gvcp/: bootstrap.c  bootstrap.h  discovery.c  discovery.h  handler.c  handler.h  protocol.c  registers.c  registers.h  statistics.c  statistics.h
components/main/gvsp/: handler.c  handler.h
components/src/: CMakeLists.txt  platform_esp32.c  platform_host.c
components/src/genicam/: registers.c  registers.h  xml.c  xml.h
components/src/gvcp/: bootstrap.c  bootstrap.h  discovery.c  discovery.h  protocol.c  protocol.h
components/src/gvsp/: packets.c  packets.h  streaming.c  streaming.h
components/src/utils/: byte_order.c  byte_order.h  platform.h  web_platform.c  web_platform.h  web_platform_esp32.c
components/src/web/: web_api.c  web_api.h  web_routes.c  web_routes.h  web_templates.c  web_templates.h
scripts/: analyze_bootstrap_response.py  analyze_discovery_response.py  aravis_discovery_fix.py  aravis_socket_analysis.py  capture_esp32_responses.py  debug_ccp_packets.py  debug_multipart_register.py  discovery_monitor.py  discovery_proxy.py  esp32_response_relay.py  extract_genicam_xml.py  packet_comparison.py  quick_aravis_test.py  read_genicam_xml.py  simple_ccp_test.py  source_address_test.py  test_ack_fix.py  test_aravis_configurations.py  test_bootstrap_registers.py  test_broadcast_detection.py  test_ccp_validation.py  test_control_channel_privilege.py  test_gvcp_discovery.py  test_gvcp_registers.py  test_heartbeat_register.py  test_interface_discovery.py  test_multipart_aravis.py  test_multipart_enable.py  test_multipart_register.py  test_routing_discovery.py  test_xml_fetch.py  validate_genicam.sh
src/: CMakeLists.txt  camera_handler.c  camera_handler.h  genicam_xml.c  genicam_xml.h  main.c  (+9 more)
